[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "rmtoo"
author = "Kristoffer Nordström"
author-email = "kristoffer@nordstroem.ch"
description-file = "Readme.rst"
home-page = "https://github.com/kown7/rmtoo"
classifiers=[
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
requires=[
    "numpy>=1.12.0",
    "scipy>=0.19.0",
    "six>=1.10.0",
    "future>=0.16.0",
    "gitdb==0.6.4",
    "gitpython==1.0.2",
    "pyyaml>=3.12",
    "stevedore>=1.21",
    "pylint>=1.7.1",
    "odfpy==1.3.4",
    "jinja2>=2.10"
]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox", "flake8", "xmldiff==2.4"]

[tool.flit.scripts]
sltoo = "rmtoo.lib.RmtooMain:main"

